:lipstick: Ensure vertical spacing in select when options wrap

--- a/src/components/forms/Select/ReactSelectWrapper.scss
+++ b/src/components/forms/Select/ReactSelectWrapper.scss
@@ -73,6 +73,10 @@
       }
     }
 
+    .rs-value-container {
+      row-gap: var(--of-select-value-container-row-gap, 4px);
+    }
+
     .rs-value--multi {
       background-color: var(
         --of-select-value-multi-background-color,
